Fine tune and format the code in customer classes
1. Customer
2. CustomerDAO
3. CustomerDAOImpl
4. CustomerService
5. CustomerResource

Additionaly added exception getmessage() to the item and user DAOImp